WP-7140 Fix alignment and border color issue

--- a/src/blocks/post-grid/styles/style.scss
+++ b/src/blocks/post-grid/styles/style.scss
@@ -285,9 +285,7 @@
     color: #666666;
   }
 
-  .responsive-block-editor-addons-alignment, 
-  .responsive-block-editor-addons-alignment-tablet,
-  .responsive-block-editor-addons-alignment-mobile  {
+  .responsive-block-editor-addons-alignment {
     max-height: 32px;
     height: 100%;
 
@@ -341,5 +339,4 @@
       }
     }
   }
-
 }
